service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-service
  namespace: superset
  labels:
    app: superset
spec:
  selector:
    app: superset
  ports:
    - name: http
      port: 80
      targetPort: 8088
  type: ClusterIP
